--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "4.*|5.*",
-        "symfony/http-kernel": "2.*|3.*"
+        "symfony/http-kernel": "2.*|3.*|4.*"
     },
     "autoload": {
         "classmap": [
